--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "mime": "^2.2.0",
     "optimist": "0.6.1",
     "semaphore": "^1.1.0",
-    "sharp": "^0.19.0",
-    "xxhash": "0.2.4"
+    "sharp": "0.19.0",
+    "xxhash": "0.3.0"
   },
   "devDependencies": {
     "browser-launcher": "^1.0.0",
