--- a/package.json
+++ b/package.json
@@ -37,28 +37,28 @@
     "isteamd": "./bin/isteamd"
   },
   "dependencies": {
-    "async": "^2.6.0",
-    "fs-extra": "^5.0.0",
+    "async": "^3.1.0",
+    "fs-extra": "^8.1.0",
     "image-pal-sharp": "^1.2.2",
     "knox": "0.9.2",
-    "lodash": "^4.17.4",
-    "mime": "^2.2.0",
+    "lodash": "^4.17.15",
+    "mime": "^2.4.2",
     "optimist": "0.6.1",
     "semaphore": "^1.1.0",
     "sharp": "^0.23.0",
     "xxhash": "0.3.0"
   },
   "devDependencies": {
-    "browser-launcher": "^1.0.0",
-    "chai": "^4.1.2",
-    "istanbul": "^0.4.4",
+    "browser-launcher": "^1.0.1",
+    "chai": "^4.2.0",
+    "istanbul": "^0.4.5",
     "jscs": "^3.0.7",
-    "jshint": "^2.9.2",
-    "mocha": "^3.5.3",
+    "jshint": "^2.10.2",
+    "mocha": "^6.2.0",
     "mocha-istanbul": "^0.3.0",
-    "open": "0.0.5",
-    "should": "^13.0.1",
-    "sinon": "^3.2.1",
-    "sinon-chai": "^2.8.0"
+    "open": "^6.2.0",
+    "should": "^13.2.3",
+    "sinon": "^7.4.1",
+    "sinon-chai": "^3.3.0"
   }
 }
