--- a/package.json
+++ b/package.json
@@ -37,6 +37,28 @@
     "isteamd": "./bin/isteamd"
   },
   "dependencies": {
-
+    "async": "^2.6.0",
+    "fs-extra": "^5.0.0",
+    "image-pal-sharp": "^1.2.2",
+    "knox": "0.9.2",
+    "lodash": "^4.17.4",
+    "mime": "^2.2.0",
+    "optimist": "0.6.1",
+    "semaphore": "^1.1.0",
+    "sharp": "^0.23.0",
+    "xxhash": "0.3.0"
+  },
+  "devDependencies": {
+    "browser-launcher": "^1.0.0",
+    "chai": "^4.1.2",
+    "istanbul": "^0.4.4",
+    "jscs": "^3.0.7",
+    "jshint": "^2.9.2",
+    "mocha": "^3.5.3",
+    "mocha-istanbul": "^0.3.0",
+    "open": "0.0.5",
+    "should": "^13.0.1",
+    "sinon": "^3.2.1",
+    "sinon-chai": "^2.8.0"
   }
 }
